# rust-aws-lambda-onnx-inference

./: .gitignore  Cargo.toml  README.md  build-and-deploy.sh  samconfig.toml  template.yaml  test-in-cloud.sh  test-local.sh
events/: api-gw-binary-req.json
layer/model/: yolov10b.onnx  yolov10s.onnx
lib/: libopenvino_c.dylib
power-tuning/: execute.sh  sample-execution-input.json
src/: main.rs
