[package]
name = "rust-lambda-inference"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.rustc]
rustflags = ["-C", "target-feature=+avx2,+sse4.2"]

[target.'cfg(target_arch = "aarch64")'.rustc]
rustflags = ["-C", "target-feature=+neon"]

[package.metadata.lambda.env]
RUST_LOG = "debug"
MODEL_PATH = "/Users/jah/isato_labs/rust-lambda-inference/layer/model/yolov10x.onnx"
HOME = "/tmp"

[dependencies]
lambda_http = "0.13.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
tokio = { version = "1", features = ["macros"] }
usls = { git = "https://github.com/hjander/usls", branch = "works-on-aws-lambda" }
# add local folder as depedency
tracing-subscriber = "0.3.18"
image = "0.25.1"
ort = { version = "2.0.0-rc.4", features = [ "load-dynamic" ] }
serde_json = "1.0.117"
base64 = "0.22.1"
env_logger = "0.11.3"
#elapsed-time = "0.1"
log = "0.4.21"
chrono = "0.4.38"
anyhow = "1.0.86"
#float-cmp = "0.9.0"